--- a/08_EdiorIcons/08_EditorIcons.csproj
+++ b/08_EdiorIcons/08_EditorIcons.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F3601F8C-BF01-4A0A-B00E-7CB1139B8A46}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>_08_EdiorIcons</RootNamespace>
-    <AssemblyName>08_EdiorIcons</AssemblyName>
+    <RootNamespace>_08_EditorIcons</RootNamespace>
+    <AssemblyName>08_EditorIcons</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -85,6 +85,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="DatabaseIcons.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
